--- a/deployment/puppet/osnailyfacter/templates/openrc.erb
+++ b/deployment/puppet/osnailyfacter/templates/openrc.erb
@@ -11,6 +11,7 @@ export OS_PASSWORD='<%= @admin_password.gsub(/'/){ %q(\') } %>'
 export OS_AUTH_URL='<%= @auth_url %>'
 export OS_DEFAULT_DOMAIN='Default'
 export OS_AUTH_STRATEGY='keystone'
+export OS_IDENTITY_API_VERSION='<%= @api_version %>'
 export OS_REGION_NAME='<%= @region_name %>'
 export CINDER_ENDPOINT_TYPE='<%= @cinder_endpoint_type %>'
 export GLANCE_ENDPOINT_TYPE='<%= @glance_endpoint_type %>'
